[project]
name = "yolo-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=1.2.0,<1.4.0",
    "backports-strenum>=1.3.1",
    "onnx-graphsurgeon>=0.5.8",
    "onnx2tf>=1.28.1",
    "onnxruntime>=1.22.1",
    "onnxslim>=0.1.59",
    "sng4onnx>=1.0.4",
    "ultralytics[export]>=8.3.168",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
